--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>client</module>
         <module>hw1Jenerics</module>
         <module>hw4Threats</module>
+        <module>hw5Threats</module>
     </modules>
 
 
