--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hw1Jenerics</module>
         <module>hw4Threats</module>
         <module>hw5Threats</module>
+        <module>hw6Tests</module>
     </modules>
 
 
