--- a/hw6Tests/pom.xml
+++ b/hw6Tests/pom.xml
@@ -16,5 +16,14 @@
         <maven.compiler.target>14.0.1</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
