--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>hw4Threats</module>
         <module>hw5Threats</module>
         <module>hw6Tests</module>
+        <module>hw7Reflection</module>
     </modules>
 
 
