--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,5 +25,22 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>ChatClient</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>ServerStart.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
